--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "import numpy as np\n",
-    "import pickle\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,14 +38,15 @@
     "        \n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings ={'results_dir_path': results_dir_path,\n",
-    "           'output_epsg': 32620,\n",
+    "           'output_epsg': 32630, ## UK\n",
+    "#           'output_epsg': 32737, ## kenya\n",
     "           'sat_name': 'S2',\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
@@ -79,7 +80,8 @@
     "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
     "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
     "           \n",
-    "            'bands': {'L8': {'pan': [['B8'],15],\n",
+    "            'bands': {'L5': {'ms': [['blue', 'green', 'red', 'nir', 'swir1', 'swir2', 'BQA'], 30]},\n",
+    "                      'L8': {'pan': [['B8'],15],\n",
     "                              'ms': [['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B10', 'BQA'], 30]},\n",
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
     "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
@@ -88,12 +90,23 @@
     "          }\n",
     "\n",
     "dates = [\n",
+    "#         ['2008-01-01', '2008-12-31'],\n",
+    "#         ['2009-01-01', '2009-12-31'],\n",
+    "#         ['2010-01-01', '2010-12-31'],\n",
+    "#         ['2011-01-01', '2011-12-31'],\n",
+    "#         ['2012-01-01', '2012-12-31'],\n",
+    "#         ['2013-01-01', '2013-12-31'],\n",
+    "#         ['2014-01-01', '2014-12-31'],\n",
+    "#         ['2015-01-01', '2015-12-31'],\n",
+    "    \n",
+    "    \n",
     "         ['2016-01-01', '2016-12-31'],\n",
     "         ['2017-01-01', '2017-12-31'],\n",
     "         ['2018-01-01', '2018-12-31'],\n",
     "         ['2019-01-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-12-31'],\n",
-    "                                     ]"
+    "                                     ]\n",
+    "download = True"
    ]
   },
   {
@@ -109,62 +122,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "sites_rois = [[[-61.166703546,13.386285093], [-61.166703546,13.349894905],\n",
-    "               [-61.216490795,13.386285093], [-61.216490795,13.349894905]],\n",
-    "              [[-61.2057165049999,13.3550601210001], [-61.2057165049999,13.284226463],\n",
-    "               [-61.253194809,13.3550601210001], [-61.253194809,13.284226463]],\n",
-    "              [[-61.252042691,13.2913084200001], [-61.252042691,13.230160147],\n",
-    "               [-61.28130129,13.2913084200001], [-61.28130129,13.230160147]],\n",
-    "              [[-61.259699901,13.233287525], [-61.259699901,13.1776702440001],\n",
-    "               [-61.2866043509999,13.233287525], [-61.2866043509999,13.1776702440001]],\n",
-    "              [[-61.208049102,13.1832541430001], [-61.208049102,13.13343525],\n",
-    "               [-61.2678437329999,13.1832541430001], [-61.2678437329999,13.13343525]],\n",
-    "              [[-61.1270383959999,13.3867923610001], [-61.1270383959999,13.365715129],\n",
-    "               [-61.1728832279999,13.3867923610001], [-61.1728832279999,13.365715129]],\n",
-    "              [[-61.107290701,13.3673933800001],  [-61.107290701,13.2866351280001],\n",
-    "               [-61.1352551479999,13.3673933800001], [-61.1352551479999,13.2866351280001]],\n",
-    "              [[-61.1069099169999,13.29456651], [-61.1069099169999,13.2067607450001],\n",
-    "               [-61.1298686229999,13.29456651], [-61.1298686229999,13.2067607450001]],\n",
-    "              [[-61.125427504,13.2127523570001], [-61.125427504,13.137030705],\n",
-    "               [-61.1617257629999,13.2127523570001], [-61.1617257629999,13.137030705]],\n",
-    "              [[-61.157544898,13.142036698],[-61.157544898,13.1203589470001],\n",
-    "               [-61.2120815659999,13.142036698],[-61.2120815659999,13.1203589470001]],\n",
-    "              [[-61.38028666,12.651823393],[-61.38028666,12.627519251],\n",
-    "               [-61.4029449619999,12.651823393],[-61.4029449619999,12.627519251]]]\"\"\"\n",
-    "\n",
-    "#for site_index, site_roi in enumerate(sites_rois):\n",
-    "for site in sites:       \n",
-    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
-    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
-    "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
-    "    roi_polygon = SDS_tools.smallest_rectangle(site_roi)\n",
-    "#    roi_polygon = site_roi\n",
-    "#    site_name = 'site_' + str(site_index+1)\n",
-    "\n",
-    "    site_name = site[:site.find('.')]\n",
-    "    site_dir_path = os.path.join(base_dir_path, site_name)\n",
-    "#    if not os.path.exists(site_dir_path):\n",
-    "#        os.mkdir(site_dir_path)\n",
-    "    median_dir_path = os.path.join(site_dir_path, 'median')\n",
-    "    if not os.path.exists(median_dir_path):\n",
-    "        os.mkdir(median_dir_path)\n",
-    "        \n",
-    "    settings['median_dir_path'] = median_dir_path\n",
-    "    settings['polygon'] = roi_polygon\n",
-    "    settings['site_name'] = site_name\n",
-    "        \n",
-    "    for date_pair in dates:\n",
-    "        \n",
-    "        settings['dates'] = date_pair \n",
-    "        \n",
-    "        printProgress(f'processing {site_name}: {date_pair}')\n",
-    "        \n",
-    "        NOC_download.retrieve_median_optical(settings)\n",
+    "if download:\n",
     "    \n",
-    "    NOC_download.save_metadata(settings)\n",
-    "            \n",
-    "print('FINISHED ...')"
+    "    for site in sites:       \n",
+    "        kml_filepath = os.path.join(sites_dir_path, site)\n",
+    "        kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
+    "        roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "\n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "\n",
+    "        settings['median_dir_path'] = median_dir_path\n",
+    "        settings['polygon'] = roi_polygon\n",
+    "        settings['site_name'] = site_name\n",
+    "\n",
+    "        for date_pair in dates:\n",
+    "\n",
+    "            settings['dates'] = date_pair \n",
+    "\n",
+    "            printProgress(f'processing {site_name}: {date_pair}')\n",
+    "\n",
+    "            NOC_download.retrieve_median_optical(settings)\n",
+    "\n",
+    "        NOC_download.save_metadata(settings)\n",
+    "\n",
+    "    print('FINISHED ...')"
    ]
   },
   {
@@ -181,7 +163,7 @@
    "outputs": [],
    "source": [
     "settings['date_range'] = ['2016-01-01', '2020-12-31']\n",
-    "settings['pansharpen'] = True\n",
+    "settings['pansharpen'] = False\n",
     "settings['max_dist_ref'] = 75\n",
     "    \n",
     "for site in sites:\n",
@@ -212,37 +194,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['date_range'] = ['2016-01-01', '2020-12-31']\n",
-    "\n",
-    "\"\"\"\n",
-    "sites_rois = [[[-61.166703546,13.386285093], [-61.166703546,13.349894905],\n",
-    "               [-61.216490795,13.386285093], [-61.216490795,13.349894905]],\n",
-    "              [[-61.2057165049999,13.3550601210001], [-61.2057165049999,13.284226463],\n",
-    "               [-61.253194809,13.3550601210001], [-61.253194809,13.284226463]],\n",
-    "              [[-61.252042691,13.2913084200001], [-61.252042691,13.230160147],\n",
-    "               [-61.28130129,13.2913084200001], [-61.28130129,13.230160147]],\n",
-    "              [[-61.259699901,13.233287525], [-61.259699901,13.1776702440001],\n",
-    "               [-61.2866043509999,13.233287525], [-61.2866043509999,13.1776702440001]],\n",
-    "              [[-61.208049102,13.1832541430001], [-61.208049102,13.13343525],\n",
-    "               [-61.2678437329999,13.1832541430001], [-61.2678437329999,13.13343525]],\n",
-    "              [[-61.1270383959999,13.3867923610001], [-61.1270383959999,13.365715129],\n",
-    "               [-61.1728832279999,13.3867923610001], [-61.1728832279999,13.365715129]],\n",
-    "              [[-61.107290701,13.3673933800001],  [-61.107290701,13.2866351280001],\n",
-    "               [-61.1352551479999,13.3673933800001], [-61.1352551479999,13.2866351280001]],\n",
-    "              [[-61.1069099169999,13.29456651], [-61.1069099169999,13.2067607450001],\n",
-    "               [-61.1298686229999,13.29456651], [-61.1298686229999,13.2067607450001]],\n",
-    "              [[-61.125427504,13.2127523570001], [-61.125427504,13.137030705],\n",
-    "               [-61.1617257629999,13.2127523570001], [-61.1617257629999,13.137030705]],\n",
-    "              [[-61.157544898,13.142036698],[-61.157544898,13.1203589470001],\n",
-    "               [-61.2120815659999,13.142036698],[-61.2120815659999,13.1203589470001]],\n",
-    "              [[-61.38028666,12.651823393],[-61.38028666,12.627519251],\n",
-    "               [-61.4029449619999,12.651823393],[-61.4029449619999,12.627519251]]]\"\"\"\n",
-    "\n",
-    "\n",
+    "settings['date_range'] =['2020-01-01', '2020-12-31']\n",
     "settings['pansharpen'] = True\n",
-    "settings['reference_threshold'] = -0.475\n",
+    "settings['reference_threshold'] = -0.6\n",
     "settings['max_dist_ref'] = 100\n",
-    "\n",
     "\n",
     "for site in sites:\n",
     "    \n",
@@ -261,21 +216,14 @@
     "        \n",
     "        %matplotlib qt\n",
     "        try:\n",
-    "            NOC_shoreline.extract_shoreline_optical(settings, batch=True)\n",
+    "            NOC_shoreline.extract_shoreline_optical(settings, batch=False)\n",
     "        except Exception as inst:\n",
-    "            printWarning('skipping image')\n",
+    "            printWarning('skipping image - check date range')\n",
     "            print(type(inst))\n",
     "            print(inst.args)\n",
     "                \n",
     "print('FINISHED ...')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
