--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -34,47 +34,37 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from utils.print_utils import printProgress, printWarning, printSuccess\n",
+    "\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
     "\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
-    "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'STV'\n",
+    "data_partition = 'c:\\\\data\\\\coastsat\\\\'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32620,   \n",
+    "            'output_epsg': 32630,   \n",
     "            'min_length_shoreline': 500, \n",
     "            \n",
     "            'sat_name': 'S1',\n",
     "            'pixel_size': 10,\n",
     "            'results_dir_path': results_dir_path\n",
     "            }\n",
-    "dates = [\n",
-    "         ['2016-01-01', '2016-06-30'],\n",
-    "         ['2016-07-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-06-30'],\n",
-    "         ['2017-07-01', '2017-12-31'],\n",
-    "         ['2018-01-01', '2018-06-30'],\n",
-    "         ['2018-07-01', '2018-12-31'],\n",
-    "         ['2019-01-01', '2019-06-30'],\n",
-    "         ['2019-07-01', '2019-12-31'],\n",
-    "         ['2020-01-01', '2020-06-30'],\n",
-    "         ['2020-07-01', '2020-12-31'],\n",
-    "                                     ]\n",
     "\n",
     "dates = [\n",
     "         ['2016-01-01', '2016-12-31'],\n",
     "         ['2017-01-01', '2017-12-31'],\n",
     "         ['2018-01-01', '2018-12-31'],\n",
     "         ['2019-01-01', '2019-12-31'],\n",
-    "         ['2020-01-01', '2020-12-31'],\n",
+    "         ['2020-01-01', '2021-03-31'],\n",
     "                                     ]\n",
     "\n",
-    "settings['date_range'] = ['2016-01-01', '2020-12-31']"
+    "# this is the date range for the reference shoreline\n",
+    "settings['date_range'] = ['2017-01-01', '2021-03-31']"
    ]
   },
   {
@@ -95,9 +85,14 @@
     "    kml_filepath = os.path.join(sites_dir_path, site)\n",
     "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
-    "\n",
+    "    \n",
+    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
+    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
+    "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "    \n",
     "    settings['polygon'] = roi_polygon\n",
     "    settings['site_name'] = site_name\n",
     "    settings['median_dir_path'] = median_dir_path\n",
@@ -128,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['polarisation'] = 'VH'\n",
+    "settings['polarisation'] = 'VV'\n",
     "settings['sigma'] = 4\n",
     "    \n",
     "for site in sites:\n",
@@ -159,8 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['reference_threshold'] = -22.0\n",
-    "settings['polarisation'] = 'VH'\n",
+    "settings['reference_threshold'] = -16\n",
+    "settings['polarisation'] = 'VV'\n",
     "settings['max_dist_ref'] = 150\n",
     "\n",
     "for site in sites:\n",
@@ -178,7 +173,7 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "\n",
     "        %matplotlib qt\n",
-    "        NOC_shoreline.extract_shoreline_sar(settings, batch=True)\n",
+    "        NOC_shoreline.extract_shoreline_sar(settings, batch=False)\n",
     "        \n",
     "print('FINISHED ...')"
    ]
