after demo and better displaying

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,16 @@
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat\\\\'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings = {\n",
-    "            'output_epsg': 32630,   \n",
+    "#            'output_epsg': 32630, # UK\n",
+    "#            'output_epsg': 32737, # Kenya    \n",
+    "            'output_epsg': 32620, # STV    \n",
     "            'min_length_shoreline': 500, \n",
     "            \n",
     "            'sat_name': 'S1',\n",
@@ -56,15 +58,15 @@
     "            }\n",
     "\n",
     "dates = [\n",
-    "         ['2016-01-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-12-31'],\n",
+    "#         ['2016-01-01', '2016-12-31'],\n",
+    "#         ['2017-01-01', '2017-12-31'],\n",
     "         ['2018-01-01', '2018-12-31'],\n",
     "         ['2019-01-01', '2019-12-31'],\n",
-    "         ['2020-01-01', '2021-03-31'],\n",
+    "         ['2020-01-01', '2020-12-31'],\n",
     "                                     ]\n",
     "\n",
     "# this is the date range for the reference shoreline\n",
-    "settings['date_range'] = ['2017-01-01', '2021-03-31']"
+    "settings['date_range'] = ['2018-01-01', '2020-12-31']"
    ]
   },
   {
@@ -76,9 +78,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing SaltWhistleBay: ['2018-01-01', '2018-12-31']\n",
+      "progress  >>>  connected to GEE\n",
+      "progress  >>>  found 71 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image downloaded\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2019-01-01', '2019-12-31']\n",
+      "progress  >>>  connected to GEE\n",
+      "progress  >>>  found 68 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image downloaded\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2020-01-01', '2020-12-31']\n",
+      "progress  >>>  connected to GEE\n",
+      "progress  >>>  found 71 images\n",
+      "progress  >>>  downloading median image\n",
+      "progress  >>>  writing metadata\n",
+      "progress  >>>  GEE connection closed\n",
+      "*******\n",
+      "success   ~~~  median image downloaded\n",
+      "*******\n",
+      "progress  >>>  metadata saved\n",
+      "FINISHED ...\n"
+     ]
+    }
+   ],
    "source": [
     "for site in sites:\n",
     "    \n",
@@ -152,9 +190,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing SaltWhistleBay: ['2018-01-01', '2018-12-31']\n",
+      "progress  >>>  metadata loaded\n",
+      "progress  >>>  mapping shoreline\n",
+      "progress  >>>  S1 reference shoreline loaded\n",
+      "*******\n",
+      "success   ~~~  shoreline saved\n",
+      "*******\n",
+      "progress  >>>  processing SaltWhistleBay: ['2019-01-01', '2019-12-31']\n",
+      "progress  >>>  metadata loaded\n",
+      "progress  >>>  mapping shoreline\n",
+      "progress  >>>  S1 reference shoreline loaded\n"
+     ]
+    }
+   ],
    "source": [
-    "settings['reference_threshold'] = -16\n",
+    "#settings['reference_threshold'] = -16\n",
     "settings['polarisation'] = 'VV'\n",
     "settings['max_dist_ref'] = 150\n",
     "\n",
@@ -213,6 +269,13 @@
     "            \n",
     "print('FINISHED ...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
