--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -34,19 +34,20 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
     "from utils.print_utils import printProgress, printSuccess, printWarning\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, SDS_tools, SDS_shoreline\n",
     "        \n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'STV'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "results_dir_path = os.path.join(base_dir_path, 'results')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "settings ={'results_dir_path': results_dir_path,\n",
-    "           'output_epsg': 32630, ## UK\n",
-    "#           'output_epsg': 32737, ## kenya\n",
+    "#           'output_epsg': 32630, ## UK\n",
+    "           'output_epsg': 32620, ## STV\n",
+    " #          'output_epsg': 32737, ## kenya\n",
     "           'sat_name': 'S2',\n",
     "\n",
     "           'cloud_thresh':0.9,\n",
@@ -76,9 +77,9 @@
     "            'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
     "   \n",
     "           # labels for classes for the classifier and colours for display\n",
-    "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
-    "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
-    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
+    "           'classes':{'hard': [1, [1, 0, 0], 0], 'nature': [2, [0, 1, 0], 2],\n",
+    "                      'urban': [3, [1, 1, 0], 1], 'white-water': [4, [1, 0, 1], 4],\n",
+    "                      'water': [5, [0, 0.4, 1], 5], 'sand': [6, [1, 0.6, 0], 3]},\n",
     "           \n",
     "            'bands': {'L5': {'ms': [['blue', 'green', 'red', 'nir', 'swir1', 'swir2', 'BQA'], 30]},\n",
     "                      'L8': {'pan': [['B8'],15],\n",
@@ -100,13 +101,13 @@
     "#         ['2015-01-01', '2015-12-31'],\n",
     "    \n",
     "    \n",
-    "         ['2016-01-01', '2016-12-31'],\n",
-    "         ['2017-01-01', '2017-12-31'],\n",
-    "         ['2018-01-01', '2018-12-31'],\n",
-    "         ['2019-01-01', '2019-12-31'],\n",
+    "#         ['2016-01-01', '2016-12-31'],\n",
+    "#         ['2017-01-01', '2017-12-31'],\n",
+    "#         ['2018-01-01', '2018-12-31'],\n",
+    "#         ['2019-01-01', '2019-12-31'],\n",
     "         ['2020-01-01', '2020-12-31'],\n",
     "                                     ]\n",
-    "download = True"
+    "download = False"
    ]
   },
   {
@@ -162,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['date_range'] = ['2016-01-01', '2020-12-31']\n",
+    "settings['date_range'] = ['2017-01-01', '2020-12-31']\n",
     "settings['pansharpen'] = False\n",
     "settings['max_dist_ref'] = 75\n",
     "    \n",
@@ -194,9 +195,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['date_range'] =['2020-01-01', '2020-12-31']\n",
+    "settings['date_range'] =['2017-01-01', '2020-12-31']\n",
     "settings['pansharpen'] = True\n",
-    "settings['reference_threshold'] = -0.6\n",
+    "#settings['reference_threshold'] = -0.416\n",
     "settings['max_dist_ref'] = 100\n",
     "\n",
     "for site in sites:\n",
@@ -215,12 +216,27 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        %matplotlib qt\n",
-    "        try:\n",
-    "            NOC_shoreline.extract_shoreline_optical(settings, batch=False)\n",
-    "        except Exception as inst:\n",
-    "            printWarning('skipping image - check date range')\n",
-    "            print(type(inst))\n",
-    "            print(inst.args)\n",
+    "        if settings['sat_name'] == 'S2':\n",
+    "            \n",
+    "            try:\n",
+    "                NOC_shoreline.extract_shoreline_optical(settings, batch=False)\n",
+    "\n",
+    "            except Exception as inst:\n",
+    "                printWarning('skipping image - check date range')\n",
+    "                print(type(inst))\n",
+    "                print(inst.args)\n",
+    "                \n",
+    "        elif settings['sat_name'] in ['L5', 'L8']:\n",
+    "            \n",
+    "            metadata = NOC_download.load_metadata(settings)\n",
+    "            inputs ={ 'satname': settings['sat_name'],\n",
+    "                      'sitename': site_name,\n",
+    "                      'filepath': median_dir_path,\n",
+    "                    }\n",
+    "            settings['inputs'] = inputs\n",
+    "            print(settings['inputs'])\n",
+    "            SDS_shoreline.extract_shorelines(metadata, settings)\n",
+    "                \n",
     "                \n",
     "print('FINISHED ...')"
    ]
